# mis

./: .env  .gitignore  README.md  docker-compose.yml
project/: .flake8  Dockerfile  pyproject.toml
project/api/v1/: urls.py
project/api/v1/celery/: views.py
project/api/v1/clinic/: serializers.py  views.py
project/api/v1/consultation/: filters.py  serializers.py  views.py
project/api/v1/doctor/: serializers.py  views.py
project/api/v1/patient/: serializers.py  views.py
project/api/v1/user/: serializers.py  views.py
project/apps/: urls.py
project/apps/clinic/: admin.py  apps.py  models.py
project/apps/clinic/migrations/: 0001_initial.py
project/apps/consultation/: __init__.py  admin.py  apps.py  models.py
project/apps/consultation/migrations/: 0001_initial.py
project/apps/doctor/: __init__.py  admin.py  apps.py  models.py
project/apps/doctor/migrations/: 0001_initial.py  0002_remove_doctor_first_name_remove_doctor_last_name_and_more.py
project/apps/helpers/: batchmixin.py  filters.py  loaders.py  permissions.py
project/apps/patient/: __init__.py  admin.py  apps.py  models.py
project/apps/patient/migrations/: 0001_initial.py
project/apps/user/: admin.py
project/apps/user/migrations/: 0001_initial.py  0002_user_username.py
project/apps/user/models/: user.py
project/settings/: test.py
project/settings/inc_django/: applications.py
project/tests/: conftest.py  test_clinic_api.py  test_consultation_api.py  test_doctor_api.py  test_patient_api.py  test_user_api_optional.py  urlhelper.py
(+1 files in other folders)
